--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -41,4 +41,5 @@
     <string name="error_not_found">Not Found. Page not found.</string>
     <string name="error_internal">Internal Server Error. Try again later.</string>
     <string name="error_unknown">Unknown error.</string>
+    <string name="app_widget_description">showing story images on widget</string>
 </resources>
