--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -51,4 +51,5 @@
     <string name="akses_ditolak">Akses ditolak</string>
     <string name="tidak_ada_nama">Tidak Ada Nama</string>
     <string name="tidak_ada_deskripsi">Tidak Ada Deskripsi</string>
+    <string name="title_activity_maps">MapsActivity</string>
 </resources>
