feat: paging3 RemoteMediator

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -49,4 +49,6 @@
     <string name="akses_ditolak">"Permission request denied"</string>
     <string name="tidak_ada_nama">No Name</string>
     <string name="tidak_ada_deskripsi">No Description</string>
+    <string name="title_activity_maps">MapsActivity</string>
+    <string name="retry">Retry</string>
 </resources>
