--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -51,4 +51,5 @@
     <string name="tidak_ada_deskripsi">No Description</string>
     <string name="title_activity_maps">MapsActivity</string>
     <string name="retry">Retry</string>
+    <string name="gagal_memuat_gaya_peta">Style parsing failed</string>
 </resources>
